# ContractStream

./: .env  Cargo.toml  README.md  flake.nix  init_db.sh  report.json
bindings/: Decided.ts  DecidedJob.ts  Job.ts  PendingJob.ts  Proposal.ts  Resume.ts  SearchContext.ts  SearchContextReq.ts  SearchContextRes.ts  User.ts
migrations/: 20230423002116_create_tables.sql  20230425221848_pgcrypto.sql  20230425223731_dropsalt.sql  20230426143741_username_not_null.sql  20230503101003_role_shane.sql  20230503102038_alter_role.sql  20230503111204_CarrerInfo.sql  20230503115322_update_career_info.sql  20230504211911_functions.sql
migrations/test_migrations/: 20230503101003_super_user.sql
src/: db.rs  db_utils.rs  http.rs  main.rs  models.rs
src/lib/: appstate.rs  db.rs  db_utils.rs  http.rs  lib.rs
templates/trivial/: flake.nix
