[package]
name = "gptftw-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.70"
async-trait = "0.1.68"
bigdecimal = { version = "0.3.0", features = ["serde"] }
derive_builder = "0.12.0"
serde = "1.0.160"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "bigdecimal"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros"] }
typed-builder = "0.14.0"
uuid = { version = "1.3.2", features = ["fast-rng", "v4"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
panic = "abort"


