[package]
name = "juggernaut_broker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "juggernaut_broker"
path = "src/lib/lib.rs"


[dependencies]
actix-web = "4.3.1"
actix-multipart = "0.6"
pdf-extract = "0.6.5"
anyhow = "1.0.70"
async-trait = "0.1.68"
bigdecimal = { version = "0.3.0", features = ["serde"] }
derive_builder = "0.12.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.28"
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.160"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "bigdecimal"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "test-util"] }
tokio-stream = "0.1.14"
ts-rs = { version = "6.2.1", features = ["bigdecimal-impl"] }
typed-builder = "0.14.0"
uuid = { version = "1.3.2", features = ["fast-rng", "v4"] }
actix-cors = "0.6.4"
dashmap = "5.4.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
panic = "abort"


